latex2mmlc/src/snapshots/latex2mmlc__tests__nabla_in_mathbf.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\mathbf{\\nabla} + \\nabla"
---
<math>
    <mi>𝛁</mi>
    <mo>+</mo>
    <mo>∇</mo>
</math>
