latex2mmlc/src/snapshots/latex2mmlc__tests__nested_transform.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\mathit{\\mathbf{a}b}"
---
<math>
    <mi>𝐚𝑏</mi>
</math>
