latex2mmlc/src/snapshots/latex2mmlc__tests__no_rbrack_instead_of_bracket.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\sqrt[3\\rbrack{1}"
---
Position: 17
UnclosedGroup(
    SquareBracketClose,
)
