latex2mmlc/src/snapshots/latex2mmlc__tests__not_less_than_symbol.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\not< x"
---
<math>
    <mo>≮</mo>
    <mi>x</mi>
</math>
