latex2mmlc/src/snapshots/latex2mmlc__tests__number_with_dot.snap
---
source: latex2mmlc/src/lib.rs
expression: 4.x
---
<math>
    <mn>4</mn>
    <mi>.</mi>
    <mi>x</mi>
</math>
