latex2mmlc/src/snapshots/latex2mmlc__tests__odv.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\odv{f}{x}"
---
<math>
    <mfrac>
        <mrow>
            <mi mathvariant="normal">d</mi>
            <mi>f</mi>
        </mrow>
        <mrow>
            <mi mathvariant="normal">d</mi>
            <mi>x</mi>
        </mrow>
    </mfrac>
</math>
