latex2mmlc/src/snapshots/latex2mmlc__tests__operator_name.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\operatorname{sn} x"
---
<math>
    <mi>sn</mi>
    <mi>x</mi>
</math>
