latex2mmlc/src/snapshots/latex2mmlc__tests__operator_name_with_single_char.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\operatorname{a}"
---
<math>
    <mi mathvariant="normal">a</mi>
</math>
