latex2mmlc/src/snapshots/latex2mmlc__tests__operator_name_with_spaces.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\operatorname{ hel lo }"
---
<math>
    <mi>hello</mi>
</math>
