latex2mmlc/src/snapshots/latex2mmlc__tests__operatorname_with_other_operator.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\operatorname{\\max}"
---
LatexError(
    0,
    ExpectedText(
        "\\operatorname",
    ),
)
