latex2mmlc/src/snapshots/latex2mmlc__tests__overset_prime.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\overset{'}{=}"
---
<math>
    <mover>
        <mo>=</mo>
        <msup>
            <mrow>
            </mrow>
            <mo>′</mo>
        </msup>
    </mover>
</math>
